# shipyard-agent

./: .gitignore  AGENT-ISSUES.md  AI-DEV-LOG.md  BENCHMARKS.md  CODEAGENT.md  EVALS.md  FRAMEWORKS.md  FUTURE-SPECS.md  HELM-BUILD1.md  README.md  pyproject.toml
docs/benchmarks/: README.md
docs/evals/: README.md
docs/evals/specs/: 01-layer2-tool-tests.md  02-layer3-framework.md  03-layer3-remaining.md  04-large-file-evals.md  05-realistic-typescript-evals.md  06-anchor-stress-evals.md
docs/phase1/: README.md
docs/phase1/specs/: 01-project-scaffolding.md  02-config.md  03-git-helpers.md  04-fastapi-server.md  (+1 more)
docs/phase2/: README.md
docs/phase3/: README.md
docs/phase4/: README.md
docs/phase6/: README.md
ship_rebuild/: DATA-MODELS.md  PROMPTS.md  SHIP-PRD.md  SPECS.md  USER-STORIES.md  WIREFRAMES.md
shipyard/: config.py  main.py  tracing.py  utils.py
shipyard/agent/: llm.py  merge_agent.py  state.py  supervisor.py  worker.py
shipyard/context/: manager.py  tiers.py  tokens.py
shipyard/edit_engine/: diff.py  engine.py  git.py  normalize.py
shipyard/middleware/: hooks.py
shipyard/server/: app.py  cli.py
shipyard/session/: events.py  manager.py  recovery.py  usage.py
shipyard/tools/: create_file.py  delete_file.py  edit_file.py  list_files.py  move_file.py  notes.py  read_file.py  registry.py  request_shared_edit.py  run_command.py  search_files.py  verify.py
tests/: test_background.py  test_edit_engine.py  test_git_helpers.py  test_multi_agent.py  test_tools.py  test_usage.py  test_verify.py
tests/evals/: framework.py  test_agent_evals.py
(+19 files in other folders)
